cerebra-rviz (0.0.0) stable; urgency=low

   * Initial release.

 -- Niels Rood <n.rood@avular.com>  Tue, 23 Apr 2024 09:26:00 +0200

cerebra-rviz (0.1.0) stable; urgency=low

   * Updated base RViz configuration file with Displays related to Origin.

 -- Niels Rood <n.rood@avular.com>  Wed, 24 Apr 2024 12:38:00 +0200