@@ -1,2 +1,1 @@
-*.deb
-*.gz
+build
