@@ -1,0 +1,21 @@
+#!/bin/bash
+if [ "$1" = "-h" ] || [ "$1" = "--help" ]; then
+    echo "Launches RViz2 with the Cerebra-RViz configuration. Requires ROS 2 environment with rviz2 to be installed and sourced."
+    echo ""
+    echo "Usage: $0"
+    echo ""
+    echo "Options:"
+    echo -e "\t-h, --help\tDisplay this help message."
+    echo -e "\t-v, --version\tDisplay the version of Cerebra-RViz."
+    exit 0
+fi
+if [ "$1" = "-v" ] || [ "$1" = "--version" ]; then
+    echo "cerebra-rviz @VERSION@"
+    exit 0
+fi
+if ! which rviz2; then
+    echo "Cerebra-RViz requires rviz2 to be available on your path (did you source your ROS 2 workspace?)."
+    exit 1
+fi
+
+rviz2 -d /usr/share/cerebra-rviz/cerebra.rviz
