@@ -1,3 +1,0 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:77f56dd6aa693043873277bfd14a77b8b3afab13a7888163e193d761341d0754
-size 356
